--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Version 1
 [x] It should have a place to store todos
 [x] It should have a way to display todos
 [x] It should have a way to add a todo
-[] It should have a way to edit a todo
+[x] It should have a way to edit a todo
 [] It shoud have a way to remove a todo
