Add a way to delete a todo (splice)

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ Version 1
 [x] It should have a way to display todos
 [x] It should have a way to add a todo
 [x] It should have a way to edit a todo
-[] It shoud have a way to remove a todo
+[x] It shoud have a way to remove a todo
