Remove vscode/codium settings. Update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Version 2
-[] It should have a function to add a todo
+[x] It should have a function to add a todo
 [] It should have a function to edit a todo
 [] It should have a function to remove a todo
 
