Add vscode/codium settings to .gitignore (for reals this time)

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
@@ -22,3 +22,4 @@
 !.vscode/*.code-snippets
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
+.vscode/settings.json
